--- a/schedule.html
+++ b/schedule.html
@@ -184,7 +184,7 @@
 
     <tr>
       <td><div class='day'>5</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
-      <td><div class='day'>6 FULL MOON</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
+      <td><div class='day'>6</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
       <td><div class='day'>7</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>8</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>9</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
@@ -194,7 +194,7 @@
 
     <tr>
       <td><div class='day'>12</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
-      <td><div class='day'>13 COLUMBUS DAY</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
+      <td><div class='day'>13</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
       <td><div class='day'>14</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>15</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>16</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
@@ -218,7 +218,7 @@
       <td><div class='day'>28</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>29</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>30</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
-      <td><div class='day'>31 HALLOWEEN</div><div class='shifts'><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">16-24 ARNOLD</span><span class="NELLING">15-23 NELLING</span></div></td>
+      <td><div class='day'>31</div><div class='shifts'><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">16-24 ARNOLD</span><span class="NELLING">15-23 NELLING</span></div></td>
       <td class='empty'></td>
     </tr>
       </tbody>
@@ -245,8 +245,8 @@
     <tr>
       <td><div class="day">2</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
       <td><div class="day">3</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
-      <td><div class="day">4 CHIEF NELLING DAY</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-      <td><div class="day">5 FULL MOON</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class="day">4 TRN DAY</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
+      <td><div class="day">5</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class="day">6</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class="day">7</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class="day">8</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span></div></td>
@@ -255,7 +255,7 @@
     <tr>
       <td><div class="day">9</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span></div></td>
       <td><div class="day">10</div><div class="shifts"><span class="WHITE">19-07 WOOD</span><span class="WOOD">07-19 WHITE</span></div></td>
-      <td><div class="day">11 VETERANS DAY</div><div class="shifts"><span class="WHITE">19-07 WOOD</span><span class="WOOD">07-15 WHITE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+      <td><div class="day">11</div><div class="shifts"><span class="WHITE">19-07 WOOD</span><span class="WOOD">07-15 WHITE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class="day">12</div><div class="shifts"><span class="POT">19-07 POT</span><span class="MCCARDLE">07-15 MCCARDLE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class="day">13</div><div class="shifts"><span class="POT">23-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class="day">14</div><div class="shifts"><span class="POT">23-07 WOOD</span><span class="WOOD">07-19 WHITE</span><span class="ARNOLD">16-24 ARNOLD</span></div></td>
@@ -277,7 +277,7 @@
       <td><div class="day">24</div><div class="shifts"><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="URBANY">15-23 URBANY</span></div></td>
       <td><div class="day">25</div><div class="shifts"><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class="day">26</div><div class="shifts"><span class="MCCARDLE">23-07 MCCARDLE</span><span class="NELLING">07-15 NELLING</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
-      <td><div class="day">27 THANKSGIVING</div><div class="shifts"><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+      <td><div class="day">27</div><div class="shifts"><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class="day">28</div><div class="shifts"><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class="day">29</div><div class="shifts"><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
     </tr>
@@ -308,13 +308,13 @@
       <td><div class='day'>1</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span><span class="URBANY">15-23 URBANY</span></div></td>
       <td><div class='day'>2</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-18 ARNOLD</span></div></td>
       <td><div class='day'>3</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">08-18 ARNOLD</span></div></td>
-      <td><div class='day'>4 FULL MOON</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
+      <td><div class='day'>4</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
       <td><div class='day'>5</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
       <td><div class='day'>6</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
     </tr>
 
     <tr>
-      <td><div class='day'>7 PEARL HARBOR REM</div><div class='shifts'><span class="ARNOLD">19-07 ARNOLD</span><span class="POT">07-19 POT</span></div></td>
+      <td><div class='day'>7</div><div class='shifts'><span class="ARNOLD">19-07 ARNOLD</span><span class="POT">07-19 POT</span></div></td>
       <td><div class='day'>8</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
       <td><div class='day'>9</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-15 WHITE</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>10</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
@@ -338,7 +338,7 @@
       <td><div class='day'>22</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
       <td><div class='day'>23</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>24</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
-      <td><div class='day'>25 CHRISTMAS</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+      <td><div class='day'>25</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>26</div><div class='shifts'><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">17-01 ARNOLD</span></div></td>
       <td><div class='day'>27</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">17-01 ARNOLD</span></div></td>
     </tr>
@@ -347,7 +347,7 @@
       <td><div class='day'>28</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
       <td><div class='day'>29</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>30</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span></div></td>
-      <td><div class='day'>31 NEW YEARS EVE</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
+      <td><div class='day'>31</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
       <td class='empty'></td>
       <td class='empty'></td>
       <td class='empty'></td>
@@ -368,7 +368,7 @@
       <td class='empty'></td>
       <td class='empty'></td>
       <td class='empty'></td>
-      <td><div class='day'>1 NEW YEARS DAY</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
+      <td><div class='day'>1</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span></div></td>
       <td><div class='day'>2</div><div class='shifts'><span class="POT">19-07 POT</span><span class="MCCARDLE">07-19 MCCARDLE</span></div></td>
       <td><div class='day'>3</div><div class='shifts'><span class="POT">19-07 POT</span><span class="ARNOLD">07-19 ARNOLD</span></div></td>
     </tr>
