--- a/schedule.html
+++ b/schedule.html
@@ -354,7 +354,7 @@
     </tr>
   </tbody>
 </table>
-<div class="month-header">January 2026 *only 1-4 set</div>
+<div class="month-header">January 2026</div>
 <table class="calendar">
   <thead>
     <tr>
@@ -387,7 +387,7 @@
       <td><div class='day'>11</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
       <td><div class='day'>12</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>13</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
-      <td><div class='day'>14</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span></div></td>
+      <td><div class='day'>14</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>15</div><div class='shifts'><span class="WOOD">19-07 WOOD</span><span class="WHITE">07-19 WHITE</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>16</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">08-16 ARNOLD</span></div></td>
       <td><div class='day'>17</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span></div></td>
@@ -399,7 +399,7 @@
       <td><div class='day'>20</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>21</div><div class='shifts'><span class="MCCARDLE">19-07 MCCARDLE</span><span class="POT">07-19 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>22</div><div class='shifts'><span class="MCCARDLE">23-07 MCCARDLE</span><span class="POT">07-15 POT</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
-      <td><div class='day'>23</div><div class='shifts'><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
+      <td><div class='day'>23</div><div class='shifts'><span class="WHITE">23-07 WHITE</span><span class="WOOD">07-15 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
       <td><div class='day'>24</div><div class='shifts'><span class="WHITE">19-07 WHITE</span><span class="WOOD">07-19 WOOD</span><span class="ARNOLD">15-23 ARNOLD</span></div></td>
     </tr>
 
